# Erebus

./: .dockerignore  .env.example  .gitignore  CODE_AGENT_USE_CASES.md  Dockerfile  PLAN.md  README.md  SKILL_TOOLS_100_IDEAS.md  docker-compose.yml  erebus.toml.example  pyproject.toml
.devcontainer/: devcontainer.json
.github/agents/: my-agent.agent.md
.github/workflows/: docker.yml
erebus/: __init__.py  agent_config.py  config.py  mcp.py
erebus/api/: __init__.py  server.py  sessions.py
erebus/auth/: __init__.py  middleware.py
erebus/channels/: __init__.py  teams.py  telegram.py
erebus/cli/: __init__.py  console.py  main.py
erebus/core/: agent.py
erebus/gateway/: __init__.py  server.py
erebus/gateway/channels/: __init__.py  base.py  manager.py  teams_channel.py  telegram_channel.py
erebus/memory/: __init__.py  manager.py
erebus/notifications/: __init__.py  manager.py
erebus/scheduler/: __init__.py  cron.py
erebus/skills/: __init__.py  github_loader.py  loader.py  registry.py
erebus/skills/builtins/: __init__.py  web_search.py
erebus/soul/: __init__.py  loader.py
erebus/tools/: __init__.py  _code_agent_builtins.py  ask_user.py  code_agent.py  file_edit.py  glob_tool.py  grep_tool.py  notify.py  obsidian.py  repl.py  scheduler.py  todo.py  web.py  workspace.py
erebus/workspace/: __init__.py  manager.py
erebuslite/: .gitignore  CONTEXT.md  PLAN.md  README.md  go.mod  go.sum
erebuslite/cmd/: main.go
plans/: holaboss-ideas.md
ptk/: Cargo.toml
ptk/hooks/: README.md
web/: README.md  package-lock.json  package.json
(+129 files in other folders)
