[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erebus"
version = "0.1.0"
description = "Feature-packed AI agent combining Agno framework with Hermes-style features"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "agno[anthropic,azure,openai,telegram]>=2.5.15",
    "rich>=13.9.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "croniter>=3.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=3.3.0",
    "botbuilder-core>=4.16.0",
    "botbuilder-integration-aiohttp>=4.16.0",
    "aiohttp>=3.10.0",
    "apprise>=1.9.0",
    "ddgs>=9.13.0",
]

[project.optional-dependencies]
telegram = ["agno[telegram]"]
teams = ["botbuilder-core>=4.16.0", "botbuilder-integration-aiohttp>=4.16.0"]
auth = ["authlib>=1.6.9", "itsdangerous>=2.2.0"]
all = ["erebus[telegram]", "erebus[teams]", "erebus[auth]"]
dev = ["pytest>=8.0", "ruff>=0.7.0"]

[project.scripts]
erebus = "erebus.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["erebus"]
